# weavr

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
crates/meldr-cli/: Cargo.toml
crates/meldr-cli/src/: main.rs
crates/meldr-core/: Cargo.toml  README.md
crates/meldr-core/src/: error.rs  hunk.rs  input.rs  lib.rs  parser.rs  resolution.rs  result.rs  session.rs
crates/meldr-core/tests/: parser_golden_tests.rs
crates/meldr-core/tests/golden/: diff3_three_way.conflict  edge_cases.conflict  simple_two_way.conflict
crates/meldr-tui/: Cargo.toml
crates/meldr-tui/src/: event.rs  lib.rs  main.rs
crates/meldr-tui/src/ui/: layout.rs  mod.rs  pane.rs
crates/weavr-ai/: Cargo.toml
crates/weavr-ai/src/: config.rs  error.rs  lib.rs  request.rs  strategy.rs
crates/weavr-ai/src/providers/: claude.rs  local.rs  mod.rs  openai.rs
crates/weavr-cli/: Cargo.toml
crates/weavr-cli/src/: cli.rs  config.rs  discovery.rs  error.rs  headless.rs  main.rs  tui.rs
crates/weavr-core/: Cargo.toml  README.md
crates/weavr-core/src/: error.rs  history.rs  hunk.rs  lib.rs  parser.rs  resolution.rs  session.rs
crates/weavr-core/tests/: parser_golden_tests.rs
crates/weavr-core/tests/golden/: multi_hunk.conflict
crates/weavr-git/: Cargo.toml
crates/weavr-git/src/: error.rs  lib.rs  porcelain.rs  repo.rs  state.rs
crates/weavr-git/tests/: integration_tests.rs
crates/weavr-tui/: Cargo.toml
crates/weavr-tui/src/: ai.rs  dialog.rs  diff.rs  editor.rs  event.rs  help.rs  input.rs  lib.rs  main.rs  navigation.rs  resolution.rs  tests.rs  undo.rs
crates/weavr-tui/src/theme/: mod.rs  types.rs
crates/weavr-tui/src/theme/builtin/: catppuccin.rs  dark.rs  dracula.rs  gruvbox.rs  light.rs  mod.rs  nord.rs  one_dark.rs  rose_pine.rs  solarized.rs  tokyo_night.rs
crates/weavr-tui/src/ui/: layout.rs  mod.rs  overlay.rs  pane.rs
docs/: architecture.md  domain-model.md  issue-14-remaining-work.md  merge-lifecycle.md  public-api.md  resolution-strategies.md  terminology.md  vision.md
tests/: conflict-playground.rs
