[workspace]
resolver = "2"
members = [
    "crates/meldr-core",
    "crates/meldr-cli",
    "crates/meldr-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["meldr contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jcucci/meldr"
description = "A terminal-first merge conflict resolver"
keywords = ["git", "merge", "conflict", "tui", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.dependencies]
# Internal crates
meldr-core = { path = "crates/meldr-core" }

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }

# TUI dependencies
ratatui = "0.29"
crossterm = "0.28"

# Common dependencies
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
