[workspace]
resolver = "2"
members = [
    "crates/weavr-core",
    "crates/weavr-cli",
    "crates/weavr-tui",
    "crates/weavr-git",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["weavr contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jcucci/weavr"
description = "A terminal-first merge conflict resolver"
keywords = ["git", "merge", "conflict", "tui", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.dependencies]
# Internal crates
weavr-core = { path = "crates/weavr-core" }
weavr-git = { path = "crates/weavr-git" }

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }

# TUI dependencies
ratatui = "0.29"
crossterm = "0.28"

# Common dependencies
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }

# Theme dependencies
catppuccin = { version = "2", features = ["ratatui"] }
