[workspace]
resolver = "2"
members = [
    "crates/weavr-core",
    "crates/weavr-cli",
    "crates/weavr-tui",
    "crates/weavr-git",
    "crates/weavr-ai",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["weavr contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jcucci/weavr"
description = "A terminal-first merge conflict resolver"
keywords = ["git", "merge", "conflict", "tui", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.dependencies]
# Internal crates
weavr-core = { path = "crates/weavr-core" }
weavr-git = { path = "crates/weavr-git" }
weavr-tui = { path = "crates/weavr-tui" }
weavr-ai = { path = "crates/weavr-ai" }

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }

# TUI dependencies
ratatui = "0.29"
crossterm = "0.28"

# Common dependencies
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Theme dependencies
catppuccin = { version = "2", features = ["ratatui"] }

# AI dependencies
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
humantime-serde = "1"
toml = "0.8"
