[package]
name = "weavr-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI orchestration and headless mode for weavr"
keywords = ["cli", "merge", "conflict"]
categories = ["command-line-utilities"]

[[bin]]
name = "weavr"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
weavr-core.workspace = true
weavr-git.workspace = true
clap.workspace = true
thiserror.workspace = true
