[package]
name = "weavr-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure merge logic engine for weavr - no IO, no UI, no Git"
keywords = ["merge", "conflict", "resolution"]
categories = ["algorithms", "data-structures"]

[lints]
workspace = true

[features]
default = []
# No experimental features yet - infrastructure ready for future use

[dependencies]
thiserror.workspace = true
serde.workspace = true
