[package]
name = "weavr-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI for weavr merge conflict resolver"
keywords = ["tui", "terminal", "ratatui", "merge"]
categories = ["command-line-interface"]

[lints]
workspace = true

[dependencies]
weavr-core.workspace = true
ratatui.workspace = true
crossterm.workspace = true
thiserror.workspace = true
catppuccin.workspace = true
tempfile = "3"

[[bin]]
name = "weavr-tui-dev"
path = "src/main.rs"
